<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activities.ActivityFavs"
    >

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/titulo_search"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerFavs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:windowSoftInputMode="adjustNothing"
        />

    <!-- Barra de botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!-- Botón Home -->
        <ImageButton
            android:id="@+id/btnCasa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#94d46f"
            android:contentDescription="@string/btn_home"
            android:src="@drawable/home" />

        <!-- Botón de la Lupa -->
        <ImageButton
            android:id="@+id/btnBuscar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#63cdb0"
            android:contentDescription="@string/btn_buscar"
            android:src="@drawable/magnify" />

        <!-- Botón de la Estrella -->
        <ImageButton
            android:id="@+id/btnFav"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="#FFAB40"
            android:contentDescription="@string/btn_fav"
            android:src="@drawable/heart" />
    </LinearLayout>
</LinearLayout>
